# brainframe_qt/api/stubs/identities.py
@@ -22,21 +22,30 @@ class IdentityStubMixin(Stub):
         return Identity.from_dict(identity)
 
     def get_identities(self, unique_name=None,
-                       encoded_for_class=None) -> List[Identity]:
+                       encoded_for_class=None,
+                       search=None) -> List[Identity]:
         """Returns all identities from the server.
 
         :param unique_name: If provided, identities will be filtered by only
             those who have the given unique name
         :param encoded_for_class: If provided, identities will be filtered for
             only those that have been encoded at least once for the given class
+        :param search: If provided, only identities that in some way contain
+            the given search query are returned. This is intended for UI search
+            features, and as such the specific semantics of how the search is
+            performed are subject to change.
         :return: List of identities
         """
         req = f"/api/identities"
+
         params = {}
         if unique_name is not None:
             params["unique_name"] = unique_name
         if encoded_for_class is not None:
             params["encoded_for_class"] = encoded_for_class
+        if search is not None:
+            params["search"] = search
+
         identities = self._get(req, params=params)
         identities = [Identity.from_dict(d) for d in identities]
 
